[gd_scene load_steps=11 format=3 uid="uid://dulosoj2dmotn"]

[ext_resource type="Script" path="res://Scenes/Enemies/JumpScout.gd" id="1_67h0u"]
[ext_resource type="Texture2D" uid="uid://c68bil5uout1j" path="res://Assets/Premium Platformer Asset Pack/Enemies/MEGA-Mad_Marshmallow.png" id="2_depe8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8bvsp"]
atlas = ExtResource("2_depe8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6ayk"]
atlas = ExtResource("2_depe8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlvxs"]
atlas = ExtResource("2_depe8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c71jn"]
atlas = ExtResource("2_depe8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpnvh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bvsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6ayk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlvxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c71jn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d2by"]
size = Vector2(4, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7fon"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1s3jw"]
size = Vector2(7, 7)

[node name="JumpScout" type="CharacterBody2D"]
script = ExtResource("1_67h0u")

[node name="Flip" type="Node2D" parent="."]

[node name="Animation" type="AnimatedSprite2D" parent="Flip"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qpnvh")

[node name="GroundDetector" type="Area2D" parent="Flip"]

[node name="CollisionSquare" type="CollisionShape2D" parent="Flip/GroundDetector"]
position = Vector2(8, 16)
shape = SubResource("RectangleShape2D_3d2by")

[node name="WallDetector1" type="Area2D" parent="Flip"]

[node name="CollisionSquare" type="CollisionShape2D" parent="Flip/WallDetector1"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_r7fon")

[node name="WallDetector2" type="Area2D" parent="Flip"]
position = Vector2(0, -8)

[node name="CollisionSquare" type="CollisionShape2D" parent="Flip/WallDetector2"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_r7fon")

[node name="WallDetector3" type="Area2D" parent="Flip"]

[node name="CollisionSquare" type="CollisionShape2D" parent="Flip/WallDetector3"]
position = Vector2(10, -16)
shape = SubResource("RectangleShape2D_r7fon")

[node name="VisionDetector" type="Area2D" parent="Flip"]
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Flip/VisionDetector"]
position = Vector2(4, 4)
polygon = PackedVector2Array(0, 0, 80, 0, 80, -24, 0, -7)

[node name="VisionShape" type="Polygon2D" parent="Flip"]
position = Vector2(4, 4)
color = Color(1, 0.0784314, 0.0352941, 0.32549)
polygon = PackedVector2Array(0, 0, 80, 0, 80, -24, 0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_1s3jw")

[node name="TurnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="FleeTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="LookoutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Flip/VisionDetector" to="." method="_on_vision_detector_body_entered"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="timeout" from="FleeTimer" to="." method="_on_flee_timer_timeout"]
